Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96099

Drag and Drop example crashes on KDE Plasma

XMLWordPrintable

    • Linux/X11
    • 2426b622e1852a418e97a3be89ea1b3eb18b8fb9 (qt/qtdeclarative/dev) b763170ba1fe5b33b8ec95f02fb59afa18bd0989 (qt/qtdeclarative/6.2)

      Steps to reproduce:

      Open the drag and drop example (qtdeclarative/examples/quick/draganddrop), and select GridView. Start dragging a square, and eventually the program should crash.

       

      Output:

      12:50:54: Starting /home/oliver/qt/dev/qtdeclarative/examples/quick/build-draganddrop-dev_build-Debug/draganddrop ...
      ASSERT: "functionName || Runtime::symbolTable().contains(funcPtr)" in file /home/oliver/qt/dev/qtdeclarative/src/qml/jit/qv4assemblercommon.cpp, line 327
      12:50:57: The program has unexpectedly finished.
      12:50:57: The process was ended forcefully.
      12:50:58: /home/oliver/qt/dev/qtdeclarative/examples/quick/build-draganddrop-dev_build-Debug/draganddrop crashed.

        For Gerrit Dashboard: QTBUG-96099
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            hurlevent Oliver Eftevaag
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes