Add "As" function to symbol table

Fixes: QTBUG-96099
Pick-to: 6.2
Change-Id: I0bc50c0a66759c36dc50b2d6ef8e16be8fbba45c
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>